--- a/package.json
+++ b/package.json
@@ -148,5 +148,8 @@
         "budget": 230400,
         "budgetPercentIncreaseRed": 5,
         "showDetails": true
+    },
+    "peerDependencies": {
+        "webpack": "^5.94.0"
     }
 }
